--- a/Client/ClientApp/ClientApp/MainPage.xaml
+++ b/Client/ClientApp/ClientApp/MainPage.xaml
@@ -48,7 +48,7 @@
         <!--ContentPanel - place additional content here-->
         <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0">
             <Button Content="SendTableIDGetMenu" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Click="Button_Click_1"/>
-            <phone:Panorama Title="Menu" Margin="-10,471,10,-421">
+            <phone:Panorama Title="Menu" Margin="-10,180,10,-130">
 
                 <!--Panorama item one-->
                 <phone:PanoramaItem Header="Drinks" x:Name="panoPaneDrinks">
@@ -57,18 +57,17 @@
 
                 <!--Panorama item one-->
                 <phone:PanoramaItem Header="Starters" x:Name="panoPaneStarters">
-                    <CheckBox Content="CheckBox" HorizontalAlignment="Left" Height="240" VerticalAlignment="Top" Width="163"/>
-
+                    <phone:LongListSelector HorizontalAlignment="Left" Width="376" x:Name="llStarter"/>
                 </phone:PanoramaItem>
 
                 <!--Panorama item one-->
                 <phone:PanoramaItem Header="Main" x:Name="panoPaneMains">
-                    <Grid/>
+                    <phone:LongListSelector HorizontalAlignment="Left" Width="376" x:Name="llMain"/>
                 </phone:PanoramaItem>
 
                 <!--Panorama item one-->
                 <phone:PanoramaItem Header="Desert" x:Name="panoPaneDesert">
-                    <Grid/>
+                    <phone:LongListSelector HorizontalAlignment="Left" Width="376" x:Name="llDesert"/>
                 </phone:PanoramaItem>
 
             </phone:Panorama>
