--- a/Client/ClientApp/ClientApp/MainPage.xaml
+++ b/Client/ClientApp/ClientApp/MainPage.xaml
@@ -40,40 +40,59 @@
          -->
 
         <!--TitlePanel contains the name of the application and page title-->
-        <StackPanel x:Name="TitlePanel" Grid.Row="0" Margin="12,17,0,28">
-            <TextBlock Text="MY APPLICATION" Style="{StaticResource PhoneTextNormalStyle}" Margin="12,0"/>
-            <TextBlock Text="Welcome!" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
-        </StackPanel>
+        <StackPanel x:Name="TitlePanel" Grid.Row="0" Margin="12,17,0,28"/>
 
         <!--ContentPanel - place additional content here-->
-        <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0">
-            <Button Content="SendTableIDGetMenu" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Click="Button_Click_1"/>
-            <phone:Panorama Title="Menu" Margin="-10,180,10,-130">
+        <Grid x:Name="ContentPanel" Grid.Row="1" Margin="10,10,14,-10">
+            <phone:Panorama Title="Menu" Margin="-10,-86,0,88" >
 
                 <!--Panorama item one-->
                 <phone:PanoramaItem Header="Drinks" x:Name="panoPaneDrinks">
-                    <phone:LongListSelector HorizontalAlignment="Left" Width="381" x:Name="llDrinks"/>
+                    <phone:LongListSelector HorizontalAlignment="Left" Width="223" x:Name="llDrinks" SelectionChanged="llDrinks_SelectionChanged"/>
                 </phone:PanoramaItem>
 
                 <!--Panorama item one-->
                 <phone:PanoramaItem Header="Starters" x:Name="panoPaneStarters">
-                    <phone:LongListSelector HorizontalAlignment="Left" Width="376" x:Name="llStarter"/>
+                    <phone:LongListSelector HorizontalAlignment="Left" Width="376" x:Name="llStarter" SelectionChanged="llStarter_SelectionChanged"/>
                 </phone:PanoramaItem>
 
                 <!--Panorama item one-->
                 <phone:PanoramaItem Header="Main" x:Name="panoPaneMains">
-                    <phone:LongListSelector HorizontalAlignment="Left" Width="376" x:Name="llMain"/>
+                    <phone:LongListSelector HorizontalAlignment="Left" Width="376" x:Name="llMain" SelectionChanged="llMain_SelectionChanged"/>
                 </phone:PanoramaItem>
 
                 <!--Panorama item one-->
                 <phone:PanoramaItem Header="Desert" x:Name="panoPaneDesert">
-                    <phone:LongListSelector HorizontalAlignment="Left" Width="376" x:Name="llDesert"/>
+                    <phone:LongListSelector HorizontalAlignment="Left" Width="376" x:Name="llDesert" SelectionChanged="llDesert_SelectionChanged"/>
+                </phone:PanoramaItem>
+
+                <!--Panorama item one-->
+                <phone:PanoramaItem Header="Your order" x:Name="panoSummary">
+                    <phone:LongListSelector x:Name="llSummary" SelectionChanged="llSummary_SelectionChanged" FontFamily="Segoe WP" Margin="-20,-40,0,70" Width="376" Height="334"/>
+                </phone:PanoramaItem>
+
+                <!--Panorama item one-->
+                <phone:PanoramaItem Header="Pay" x:Name="panoPay">
+                    <Grid HorizontalAlignment="Left" Height="404" VerticalAlignment="Top" Width="406">
+                    <TextBlock HorizontalAlignment="Left" Height="44" TextWrapping="Wrap" Text="Total" VerticalAlignment="Top" Width="99" Margin="21,9,0,0" FontSize="30"/>
+                        <TextBlock x:Name="TotalCostBFTLabel" HorizontalAlignment="Left" Margin="106,20,0,0" TextWrapping="Wrap" Text="£0.00"  VerticalAlignment="Top"/>
+                        <TextBlock HorizontalAlignment="Left" Margin="21,104,0,0" TextWrapping="Wrap" Text="Tip?" VerticalAlignment="Top" FontSize="30"/>
+                        <TextBlock x:Name="TipAmountLable" HorizontalAlignment="Left" Margin="106,115,0,0" TextWrapping="Wrap" Text="£0.00" VerticalAlignment="Top"/>
+                        <Slider x:Name="TipSlider" HorizontalAlignment="Left" Margin="0,149,0,0" VerticalAlignment="Top" Width="396" ValueChanged="TipSlider_ValueChanged"/>
+                        <Button Content="Confirm &amp; Pay" HorizontalAlignment="Left" Margin="198,322,0,0" VerticalAlignment="Top" Click="Button_Click_3"/>
+                        <TextBlock x:Name="ThankyouLable" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="53,233,53,97" FontSize="60" TextWrapping="Wrap" Text="Thank You" Width="300" Height="74" Opacity="0"/>
+                        <TextBlock x:Name="FinalCostLabel" HorizontalAlignment="Left" Margin="38,345,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top"/>
+                    </Grid>
+
+
                 </phone:PanoramaItem>
 
             </phone:Panorama>
-            <Button Content="SendTableNumberAndOrderItemsReceiveStatus" HorizontalAlignment="Left" Margin="10,87,0,0" VerticalAlignment="Top" Click="Button_Click_2"/>
+            <Button Visibility="Collapsed" Content="SendTableNumberAndOrderItemsReceiveStatus" HorizontalAlignment="Left" Margin="10,87,0,0" VerticalAlignment="Top" Click="Button_Click_2"/>
+            <Button  Content="SendTableIDGetMenu" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top" Click="Button_Click_1"/>
+            <TextBox HorizontalAlignment="Left" Height="72" Margin="3,639,-3,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="456"  IsEnabled="False" BorderThickness="0" x:Name="toast" FontSize="20"/>
         </Grid>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="26,166,0,0" Grid.Row="1" VerticalAlignment="Top"/>
+        <Button Content="Button" Visibility="Collapsed" HorizontalAlignment="Left" Margin="12,178,0,0" Grid.Row="1" VerticalAlignment="Top"/>
 
         <!--Uncomment to see an alignment grid to help ensure your controls are
             aligned on common boundaries.  The image has a top margin of -32px to
